--- a/private-review/Dockerfile
+++ b/private-review/Dockerfile
@@ -14,4 +14,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 9981
 
 # Run app.py when the container launches
-CMD ["python", "main.py"]
+CMD ["python", "app.py"]
